client-sdk/ts-web/playground/sample-envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 127.0.0.1
        port_value: 42280
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            virtual_hosts:
            - name: ts_dev_vh
              domains: ['*']
              routes:
              - match:
                  prefix: '/oasis-core'
                route:
                  cluster: oasis_node_grpc
                  max_stream_duration:
                    grpc_timeout_header_max: 0s
              - match:
                  prefix: '/'
                route:
                  cluster: dev_static
              # cors: {}
          http_filters:
          - name: envoy.filters.http.grpc_web
          # - name: envoy.filters.http.cors
          - name: envoy.filters.http.router
  clusters:
  - name: oasis_node_grpc
    connect_timeout: 0.25s
    load_assignment:
      cluster_name: cluster_0
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              pipe:
                path: node/internal.sock
    http2_protocol_options: {}
  - name: dev_static
    connect_timeout: 0.25s
    load_assignment:
      cluster_name: cluster_1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8080
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 42281
